testData/inspection/path/nonExistingPath.mjml
<mj-include <error descr="nonExistent.mjml is not resolving to a valid mjml file">path="nonExistent.mjml"</error> />
